# swarmcraft

./: .dockerignore  .gitignore  .lefthook.yml  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
demo/: verify_step2.py
src/swarmcraft/: __init__.py  main.py
src/swarmcraft/api/: routes.py  websocket.py
src/swarmcraft/core/: abc.py  algorithm_factory.py  loss_functions.py  pso.py  swarm_base.py
src/swarmcraft/database/: redis_client.py
src/swarmcraft/models/: session.py
src/swarmcraft/utils/: name_generator.py
tests/: test_abc.py  test_algorithmselector.py  test_api.py  test_config.py  test_core.py  test_factory.py  test_websocket.py
