[project]
name = "swarmcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
swarmcraft = "swarmcraft:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
